--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
         <div class="bg-white p-6 rounded shadow-lg max-w-sm w-full mx-auto text-center">
             <h3 class="text-lg font-medium mb-4">Select Rental Duration for Kart <span id="duration-kart-id" class="font-bold"></span></h3>
             <input type="hidden" id="duration-modal-kart-id-hidden">
-            <button id="duration-30m" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mr-2">30 min</button>
-            <button id="duration-1h" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">1 hour</button>
+            <button id="duration-30s" class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded mr-2 mb-2">30 sec (Test)</button>
+            <button id="duration-30m" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mr-2 mb-2">30 min</button>
+            <button id="duration-1h" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mb-2">1 hour</button>
             <button id="duration-cancel" class="mt-4 text-gray-500 hover:text-gray-700 text-sm block mx-auto">Cancel</button>
         </div>
     </div>
