--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
             </div>
         </div>
 
+        <div id="elapsed-time-popup" class="popup" style="display: none;">
+            <div class="popup-content">
+                <h3>Închiriere Finalizată</h3>
+                <p id="elapsed-time-message">Timpul scurs: ...</p>
+                <button id="elapsed-time-ok">OK</button>
+            </div>
+        </div>
+
         <div class="history-navigation">
             <button id="viewHistoryButton">Vezi Istoric Închirieri</button>
         </div>
