--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Panou de Control Închirieri Go-Kart</h1>
 
         <div id="kart-categories">
-        </div>
+            </div>
 
         <div id="rental-popup" class="popup" style="display: none;">
             <div class="popup-content">
@@ -44,6 +44,7 @@
 
         <div class="history-navigation">
             <button id="viewHistoryButton">Vezi Istoric Închirieri</button>
+            <button id="enableNotificationsButton" style="margin-left: 10px;">Activează Notificări</button>
         </div>
     </div>
 
