--- a/history.html
+++ b/history.html
@@ -54,7 +54,9 @@
         <div class="popup-content">
             <h3>Șterge Istoric</h3>
             <p>Sunteți sigur că doriți să ștergeți tot istoricul închirierilor?</p>
-            <button id="delete-history-page-yes">Da</button> <button id="delete-history-page-no">Nu</button> </div>
+            <button id="delete-history-page-yes">Da</button> 
+            <button id="delete-history-page-no">Nu</button> 
+        </div>
     </div>
 
     <script src="history_script.js"></script>
